--- a/Memoria/proyecto.tex
+++ b/Memoria/proyecto.tex
@@ -4,10 +4,10 @@
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
 \usepackage{float}
-% \usepackage[style=list, number=none]{glossary} %
+\usepackage{subfig}% \usepackage[style=list, number=none]{glossary} %
 %\usepackage{titlesec}
 %\usepackage{pailatino}
-
+\usepackage[font=scriptsize]{caption}
 \decimalpoint
 \usepackage{dcolumn}
 \newcolumntype{.}{D{.}{\esperiod}{-1}}
